# 2021-bordeaux-cython-numba

./: .gitignore  .travis.yml  LICENSE  Makefile  README
.build_tools/travis/: install.sh
01-cython-primes/: solution.py
02-cython-fibbo/: exercise.ipynb  solution.ipynb
03-cython-distrib/: setup.py
04-mean3filter/: exercise.ipynb  solution.pyx
__main__/: 800px-Roundbale1.jpg.txt  Avena-sativa.jpg.txt  cython-and-numba.ipynb
cython-distrib/: .gitignore  README
cython-fibbo/: exercise.ipynb
cython-parallel-filter/: .gitignore  README  mean_filter.pyx
cython-primes/: exercise.ipynb
cython-zstd/: .gitignore  README  meson.build  test_wrap_zstd.py  wrap_zstd.pyx  wrap_zstd.solution.pyx
mean3filter/: exercise.ipynb  filter.py  plot_data.py
numba-dot/: exercise.ipynb  solution.ipynb
optimizing/: optimizing.ipynb
profiling/examples/demonstrating_caching_effects/: examples.py
profiling/examples/recursive_function/: demo.py
profiling/exercises/dot_product/: dot.py
profiling/exercises/factorial/: factorial.py
profiling_demo/: lib.py  serious_science_stuff.py
pythran-distrib/: .gitignore  README  integrate_f6.py  meson.build  setup.py
